--- a/sass/partials/_framework.scss
+++ b/sass/partials/_framework.scss
@@ -114,10 +114,10 @@
 
 .section {
     width: 100%;
-    min-height: 400px;
+    // min-height: 400px;
 
     @media (max-width: $tablet-breakpoint) {
-        min-height: 200px;
+        // min-height: 200px;
     }
 }
 
